// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Accordion examples ArrowKeysAndNoTabNavAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    v-accordion=""
  >
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        tabindex="0"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 1 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        tabindex="-1"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 2 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        tabindex="-1"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 3 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples DefaultAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    v-accordion=""
  >
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
        <div
          class="v-gap-6 v-align-items-center v-flex v-flex-row"
          valignitemscenter=""
          vflex=""
          vgap="6"
        >
          Accordion title
        </div>
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples DisabledAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    v-accordion=""
  >
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        aria-disabled="true"
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        tabindex="-1"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
        <div
          class="v-gap-6 v-align-items-center v-flex v-flex-row"
          valignitemscenter=""
          vflex=""
          vgap="6"
        >
          Accordion title
        </div>
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples MultiSelectDefaultAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    multiselect=""
    v-accordion=""
  >
    <details
      class="v-accordion"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 1 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 2 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 3 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples MultiSelectExpandedAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    multiselect=""
    v-accordion=""
  >
    <details
      class="v-accordion"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 1 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      open="open"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-rotated-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
          
        </v-icon-visa-toggle>
         Accordion title 2 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 3 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples MultiSelectSubtleAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    multiselect=""
    subtle=""
    v-accordion=""
  >
    <details
      class="v-accordion"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-tertiary v-typography-body-2-medium"
        style="--v-button-default-background: transparent; --v-accordion-background: transparent; --v-button-default-gap: 2px; --v-accordion-items-gap: 2px; --v-accordion-foreground-initial: var(--palette-default-active);"
        type="button"
        v-accordion-heading=""
        v-button=""
        vtypography="body-2-medium"
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 1 
      </summary>
      <div
        class="v-accordion-panel"
        style="--v-accordion-panel-background-color: transparent; --v-accordion-panel-border-size: 0px; --v-accordion-panel-padding-inline: 32px;"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-tertiary v-typography-body-2-medium"
        style="--v-button-default-background: transparent; --v-accordion-background: transparent; --v-button-default-gap: 2px; --v-accordion-items-gap: 2px; --v-accordion-foreground-initial: var(--palette-default-active);"
        type="button"
        v-accordion-heading=""
        v-button=""
        vtypography="body-2-medium"
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 2 
      </summary>
      <div
        class="v-accordion-panel"
        style="--v-accordion-panel-background-color: transparent; --v-accordion-panel-border-size: 0px; --v-accordion-panel-padding-inline: 32px;"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-tertiary v-typography-body-2-medium"
        style="--v-button-default-background: transparent; --v-accordion-background: transparent; --v-button-default-gap: 2px; --v-accordion-items-gap: 2px; --v-accordion-foreground-initial: var(--palette-default-active);"
        type="button"
        v-accordion-heading=""
        v-button=""
        vtypography="body-2-medium"
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 3 
      </summary>
      <div
        class="v-accordion-panel"
        style="--v-accordion-panel-background-color: transparent; --v-accordion-panel-border-size: 0px; --v-accordion-panel-padding-inline: 32px;"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples MultiSelectWithDisabledAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    multiselect=""
    v-accordion=""
  >
    <details
      class="v-accordion"
      v-accordion-item=""
    >
      <summary
        aria-disabled="true"
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        tabindex="-1"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 1 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 2 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 3 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples SeparateToggleAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    v-accordion=""
  >
    <div
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <div
        class="v-accordion-heading v-align-items-center v-flex v-flex-row"
        id="accordion-heading-standalone"
        v-accordion-heading=""
        valignitemscenter=""
        vflex=""
      >
        <input
          aria-labelledby="accordion-heading-standalone"
          class="v-checkbox"
          id="checkbox-standalone"
          type="checkbox"
          v-checkbox=""
          value="checkbox-standalone-value"
        />
         Accordion title 
        <button
          aria-expanded="false"
          aria-labelledby="accordion-heading-standalone"
          buttonsize="small"
          class="v-button v-button-icon v-button-small v-ml-auto v-my-auto"
          type="button"
          v-button-icon=""
          vml="auto"
          vmy="auto"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            style="--v-accordion-icon-color: white;"
            v-icon-visa-chevron-right-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </button>
      </div>
      <div
        aria-hidden="true"
        class="v-accordion-panel v-hide"
        v-accordion-panel=""
      >
         This is required text that describes the accordion section in more detail. 
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion examples SingleSelectDefaultAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    v-accordion=""
  >
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 1 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 2 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 3 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples SingleSelectExpandedAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    v-accordion=""
  >
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 1 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      open="open"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-down-tiny=""
            v-toggle-rotated-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          
          
        </v-icon-visa-toggle>
         Accordion title 2 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 3 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples SingleSelectSubtleAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    subtle=""
    v-accordion=""
  >
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-tertiary v-typography-body-2-medium"
        style="--v-button-default-background: transparent; --v-accordion-background: transparent; --v-button-default-gap: 2px; --v-accordion-items-gap: 2px; --v-accordion-foreground-initial: var(--palette-default-active);"
        type="button"
        v-accordion-heading=""
        v-button=""
        vtypography="body-2-medium"
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 1 
      </summary>
      <div
        class="v-accordion-panel"
        style="--v-accordion-panel-background-color: transparent; --v-accordion-panel-border-size: 0px; --v-accordion-panel-padding-inline: 32px;"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-tertiary v-typography-body-2-medium"
        style="--v-button-default-background: transparent; --v-accordion-background: transparent; --v-button-default-gap: 2px; --v-accordion-items-gap: 2px; --v-accordion-foreground-initial: var(--palette-default-active);"
        type="button"
        v-accordion-heading=""
        v-button=""
        vtypography="body-2-medium"
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 2 
      </summary>
      <div
        class="v-accordion-panel"
        style="--v-accordion-panel-background-color: transparent; --v-accordion-panel-border-size: 0px; --v-accordion-panel-padding-inline: 32px;"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-tertiary v-typography-body-2-medium"
        style="--v-button-default-background: transparent; --v-accordion-background: transparent; --v-button-default-gap: 2px; --v-accordion-items-gap: 2px; --v-accordion-foreground-initial: var(--palette-default-active);"
        type="button"
        v-accordion-heading=""
        v-button=""
        vtypography="body-2-medium"
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 3 
      </summary>
      <div
        class="v-accordion-panel"
        style="--v-accordion-panel-background-color: transparent; --v-accordion-panel-border-size: 0px; --v-accordion-panel-padding-inline: 32px;"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples SingleSelectWithDisabledAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    v-accordion=""
  >
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        aria-disabled="true"
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        tabindex="-1"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 1 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 2 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 3 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples SubtleAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    subtle=""
    v-accordion=""
  >
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        buttoncolor="tertiary"
        buttonsize="medium"
        class="v-accordion-heading v-button v-button-tertiary v-typography-body-2-medium"
        style="--v-button-default-background: transparent; --v-accordion-background: transparent; --v-button-default-gap: 2px; --v-accordion-items-gap: 2px; --v-accordion-foreground-initial: var(--palette-default-active);"
        type="button"
        v-accordion-heading=""
        v-button=""
        vtypography="body-2-medium"
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 
      </summary>
      <div
        class="v-accordion-panel"
        style="--v-accordion-panel-background-color: transparent; --v-accordion-panel-border-size: 0px; --v-accordion-panel-padding-inline: 32px;"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples SubtleDisabledAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    subtle=""
    v-accordion=""
  >
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        aria-disabled="true"
        buttoncolor="tertiary"
        buttonsize="medium"
        class="v-accordion-heading v-button v-button-tertiary v-typography-body-2-medium"
        style="--v-button-default-background: transparent; --v-accordion-background: transparent; --v-button-default-gap: 2px; --v-accordion-items-gap: 2px;"
        tabindex="-1"
        type="button"
        v-accordion-heading=""
        v-button=""
        vtypography="body-2-medium"
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 
      </summary>
      <div
        class="v-accordion-panel"
        style="--v-accordion-panel-background-color: transparent; --v-accordion-panel-border-size: 0px; --v-accordion-panel-padding-inline: 32px;"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples SubtleWithIconAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    subtle=""
    v-accordion=""
  >
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-tertiary v-typography-body-2-medium"
        style="--v-button-default-background: transparent; --v-accordion-background: transparent; --v-button-default-gap: 2px; --v-accordion-items-gap: 2px; --v-accordion-foreground-initial: var(--palette-default-active);"
        type="button"
        v-accordion-heading=""
        v-button=""
        vtypography="body-2-medium"
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-cloud v-icon-low v-icon-visa"
          focusable="false"
          height="24"
          v-icon-visa-cloud-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-secondary"
            d="M14 9.00098C15.65 9.00098 17 10.351 17 12.001H15C15 11.451 14.55 11.001 14 11.001V9.00098Z"
          />
          <path
            class="v-icon-primary"
            d="M14 4.00098C17.66 4.00098 20.6697 6.82137 20.9697 10.4014C22.7897 11.1814 24 12.981 24 15.001C24 17.761 21.76 20.001 19 20.001H5C2.24 20.001 0 17.761 0 15.001C0 12.751 1.49995 10.8212 3.58984 10.2012C3.97984 8.36117 5.58 7.00098 7.5 7.00098C7.73996 7.00098 7.97999 7.02056 8.20996 7.06055C9.50998 5.16071 11.6601 4.00098 14 4.00098ZM14 6.00098C12.13 6.00098 10.4296 7.03117 9.55957 8.70117L9.12988 9.52051L8.28027 9.16113C8.04027 9.05113 7.77 9.00098 7.5 9.00098C6.4 9.00098 5.5 9.90098 5.5 11.001V11.8809L4.62012 12.0205C3.13012 12.2105 2 13.491 2 15.001C2 16.651 3.35 18.001 5 18.001H19C20.65 18.001 22 16.651 22 15.001C22 13.631 21.08 12.4308 19.75 12.0908L18.9805 11.8906L19 11.001C19 8.24098 16.76 6.00098 14 6.00098Z"
          />
        </svg>
         Accordion title 
      </summary>
      <div
        class="v-accordion-panel"
        style="--v-accordion-panel-background-color: transparent; --v-accordion-panel-border-size: 0px; --v-accordion-panel-padding-inline: 32px;"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples WithArrowKeyNavAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    v-accordion=""
  >
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 1 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 2 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 3 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples WithBadgeAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    v-accordion=""
  >
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        aria-describedby="a-v-badge-0"
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 
        <div
          badgetype="stable"
          class="v-badge v-badge-stable v-ml-auto"
          id="a-v-badge-0"
          v-badge=""
          vml="auto"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-success v-icon-tiny v-icon-visa v-m-0"
            focusable="false"
            height="16"
            v-icon-visa-success-tiny=""
            vM="0"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-secondary"
              d="M8 0C9.30716 0 10.5403 0.315171 11.6299 0.871094L10.1162 2.38477C9.45802 2.13659 8.74502 2 8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 7.78891 13.9881 7.58047 13.9668 7.375L15.6768 5.75C15.8857 6.46393 16 7.21854 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0Z"
            />
            <path
              class="v-icon-primary"
              d="M15 3.46582L7.72852 10.9961L5 8.18262L6.42578 6.71289L7.72852 8.05664L13.5742 1.99609L15 3.46582Z"
            />
          </svg>
          <span>
            Label
          </span>
        </div>
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples WithCustomToggleIconsAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    v-accordion=""
  >
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        
        <svg
          aria-hidden="true"
          class="v-accordion-toggle-icon v-icon v-icon-disclosure-expand v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-disclosure-expand-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M13 8L4 14V2L13 8Z"
          />
        </svg>
        
         Accordion title 1 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        
        <svg
          aria-hidden="true"
          class="v-accordion-toggle-icon v-icon v-icon-disclosure-expand v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-disclosure-expand-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M13 8L4 14V2L13 8Z"
          />
        </svg>
        
         Accordion title 2 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        
        <svg
          aria-hidden="true"
          class="v-accordion-toggle-icon v-icon v-icon-disclosure-expand v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-disclosure-expand-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M13 8L4 14V2L13 8Z"
          />
        </svg>
        
         Accordion title 3 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples WithIconAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    v-accordion=""
  >
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-cloud v-icon-low v-icon-visa"
          focusable="false"
          height="24"
          v-icon-visa-cloud-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-secondary"
            d="M14 9.00098C15.65 9.00098 17 10.351 17 12.001H15C15 11.451 14.55 11.001 14 11.001V9.00098Z"
          />
          <path
            class="v-icon-primary"
            d="M14 4.00098C17.66 4.00098 20.6697 6.82137 20.9697 10.4014C22.7897 11.1814 24 12.981 24 15.001C24 17.761 21.76 20.001 19 20.001H5C2.24 20.001 0 17.761 0 15.001C0 12.751 1.49995 10.8212 3.58984 10.2012C3.97984 8.36117 5.58 7.00098 7.5 7.00098C7.73996 7.00098 7.97999 7.02056 8.20996 7.06055C9.50998 5.16071 11.6601 4.00098 14 4.00098ZM14 6.00098C12.13 6.00098 10.4296 7.03117 9.55957 8.70117L9.12988 9.52051L8.28027 9.16113C8.04027 9.05113 7.77 9.00098 7.5 9.00098C6.4 9.00098 5.5 9.90098 5.5 11.001V11.8809L4.62012 12.0205C3.13012 12.2105 2 13.491 2 15.001C2 16.651 3.35 18.001 5 18.001H19C20.65 18.001 22 16.651 22 15.001C22 13.631 21.08 12.4308 19.75 12.0908L18.9805 11.8906L19 11.001C19 8.24098 16.76 6.00098 14 6.00098Z"
          />
        </svg>
         Accordion title 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples WithProgrammaticExpansionAccordionComponent should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
    v-accordion=""
  >
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 1 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 2 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
    <details
      class="v-accordion"
      name="a-accordion-details--0"
      v-accordion-item=""
    >
      <summary
        class="v-accordion-heading v-button v-button-large v-button-secondary"
        type="button"
        v-accordion-heading=""
        v-button=""
      >
        <v-icon-visa-toggle
          class="v-icon v-icon-tiny v-accordion-toggle-icon"
          style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
        >
          
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa v-accordion-toggle-icon"
            focusable="false"
            height="16"
            v-icon-visa-chevron-right-tiny=""
            v-toggle-default-template=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          
        </v-icon-visa-toggle>
         Accordion title 3 
      </summary>
      <div
        class="v-accordion-panel"
        v-accordion-panel=""
      >
        This is required text that describes the accordion section in more detail.
      </div>
    </details>
  </div>
  <div
    class="v-mt-12"
    vmt="12"
  >
    <button
      class="v-button"
      type="button"
      v-button=""
    >
      Expand first item
    </button>
  </div>
</div>
`;
